--- a/src/Brioche/CoreBundle/Resources/views/Mail/test.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Mail/test.html.twig
@@ -1,6 +1,5 @@
 {% extends "BriocheCoreBundle:Mail:layout.html.twig" %}
 
 {% block body %}
-<h3>Mail</h3>
-<p>{{ txt }}</p>
+<p>hello</p>
 {% endblock %}
