home page wording, images

--- a/src/Brioche/CoreBundle/Resources/views/Front/index.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Front/index.html.twig
@@ -13,13 +13,13 @@
                             <h3>Commande</h3>
                             <br />
                             <p>
-                                <img src="//dummyimage.com/256" alt="alt" class="img-circle img-thumbnail img-responsive">
+                                <img src="{{ asset('bundles/briochecore/img/order.png') }}" alt="alt" class="img-circle img-thumbnail img-responsive">
                                 <br />
                                 <br />
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Sed vulputate facilisis odio, blandit feugiat enim ultricies quis.
-                                Nullam pulvinar mi vitae ornare viverra.
-                                Duis tempor nibh non tempor condimentum.
+                                Personnalisez votre brioche à travers le
+                                <a href="{{ path('brioche_index') }}">formulaire de création</a>
+                                en choisissant la tournée, la taille, en ajoutant un agrément,
+                                et en variant la quantité de beurre ou de sucre.
                             </p>
                             <hr class="visible-xs-block" />
                         </div>
@@ -27,13 +27,12 @@
                             <h3>Fabrication</h3>
                             <br />
                             <p>
-                                <img src="//dummyimage.com/256" alt="alt" class="img-circle img-thumbnail img-responsive">
+                                <img src="{{ asset('bundles/briochecore/img/cooking.png') }}" alt="alt" class="img-circle img-thumbnail img-responsive">
                                 <br />
                                 <br />
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Sed vulputate facilisis odio, blandit feugiat enim ultricies quis.
-                                Nullam pulvinar mi vitae ornare viverra.
-                                Duis tempor nibh non tempor condimentum.
+                                Une fois la commande validée, je prépare votre brioche la veille pour le lendemain
+                                <a href="{{ path('front_products') }}">avec ces ingrédients</a>.<br />
+                                Je la prépare la veille pour le lendemain, et la fais cuire le jour même.
                             </p>
                             <hr class="visible-xs-block" />
                         </div>
@@ -41,13 +40,11 @@
                             <h3>Tournée</h3>
                             <br />
                             <p>
-                                <img src="//dummyimage.com/256" alt="alt" class="img-circle img-thumbnail img-responsive">
+                                <img src="{{ asset('bundles/briochecore/img/saxo.png') }}" alt="Livraison" class="img-circle img-thumbnail img-responsive">
                                 <br />
                                 <br />
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Sed vulputate facilisis odio, blandit feugiat enim ultricies quis.
-                                Nullam pulvinar mi vitae ornare viverra.
-                                Duis tempor nibh non tempor condimentum.
+                                Je livre moi même vos brioches dans les villes que je dessers sans coût supplémentaire.<br />
+                                Vous la recevez tiède, et dans le crénaux horaire que vous avec choisi.
                             </p>
                         </div>
                     </div>
