--- a/src/Brioche/CoreBundle/Resources/views/Front/products.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Front/products.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 <section class="products">
-    <h2 class="text-center">Produits et allergies</h2>
+    <h2 class="text-center">Ingrédients et allergies</h2>
     <br />
     <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
