--- a/src/Brioche/CoreBundle/Resources/views/_navbar.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/_navbar.html.twig
@@ -16,17 +16,7 @@
             <ul class="nav navbar-nav">
                 <li class="{{ 'active'|onpath('front_index') }}"><a href="{{ path('front_index') }}">Accueil</a></li>
                 <li class="{{ 'active'|onpath() }}"><a href="{{ path('brioche_index') }}">Ma brioche</a></li>
-                <li class="{{ 'active'|onpath('front_products') }}"><a href="{{ path('front_products') }}">Produits et allergies</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Mon compte <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">Mes informations</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">Se déconnecter</a></li>
-                    </ul>
-                </li>
+                <li class="{{ 'active'|onpath('front_products') }}"><a href="{{ path('front_products') }}">Ingrédients et allergies</a></li>
             </ul>
         </div>
     </div>
