--- a/src/Brioche/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/layout.html.twig
@@ -45,5 +45,16 @@
         %}
                 <script src="{{ asset_url }}" type="text/javascript"></script>
         {% endjavascripts %}
+
+        {# Google anal (anal ?) (yes, analytics !) #}
+        <script type="text/javascript">
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-54291505-1', 'auto');
+            ga('send', 'pageview');
+        </script>
     </body>
 </html>
