fix after prod problems

--- a/src/Brioche/CoreBundle/Resources/views/Front/index.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Front/index.html.twig
@@ -13,7 +13,7 @@
                             <h3>Commande</h3>
                             <br />
                             <p>
-                                <img src="{{ asset('bundles/briochecore/img/order.png') }}" alt="alt" class="img-circle img-thumbnail img-responsive">
+                                <img src="{{ asset('bundles/briochecore/img/order.png') }}" alt="Commande" class="img-circle img-thumbnail img-responsive">
                                 <br />
                                 <br />
                                 Personnalisez votre brioche à travers le
@@ -27,7 +27,7 @@
                             <h3>Fabrication</h3>
                             <br />
                             <p>
-                                <img src="{{ asset('bundles/briochecore/img/cooking.png') }}" alt="alt" class="img-circle img-thumbnail img-responsive">
+                                <img src="{{ asset('bundles/briochecore/img/cooking.png') }}" alt="Fabrication" class="img-circle img-thumbnail img-responsive">
                                 <br />
                                 <br />
                                 Une fois la commande validée, je prépare votre brioche la veille pour le lendemain
