--- a/src/Brioche/CoreBundle/Resources/views/Brioche/summary.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/summary.html.twig
@@ -26,7 +26,11 @@
                                     <div class="col-md-10 col-md-offset-1">
                                         <div class="text-center">
                                             <form method="post">
-                                                <input type="submit" name="valid" value="Valider cette brioche" class="btn btn-primary" />
+                                                <input type="hidden" name="valid" value="1" />
+                                                <button type="submit" role="submit" class="btn btn-primary">
+                                                    <span class="glyphicon glyphicon-ok-circle"></span>
+                                                    Valider cette brioche
+                                                </button>
                                             </form>
                                         </div>
                                     </div>
