--- a/src/Brioche/CoreBundle/Resources/views/Brioche/perso.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/perso.html.twig
@@ -13,9 +13,10 @@
                 <h3 class="text-center">{{ brioche.typeTitle }} {{ brioche.size.value }}</h3>
                 <div class="padd">
                     <p class="lead">
-                        Et est admodum mirum videre plebem innumeram mentibus ardore
-                        quodam infuso cum dimicationum curulium eventu pendentem.
+                        Vous préférez une brioche bien sucrée, ou peu beurrée ?
+                        Personnalisez ici la composition de votre brioche !
                     </p>
+                    <br />
                     <form class="form-horizontal" role="form" method="post">
                         <div class="form-group">
                             <label for="butter" class="col-xs-4 control-label">Beurre</label>
@@ -64,12 +65,14 @@
                                 {% endfor %}
                             </select>
                         </div>
+                        <br />
                         <div class="text-center">
                             <button class="btn btn-success" role="submit">
                                 <span class="glyphicon glyphicon-ok-circle"></span>
                                 Valider
                             </button>
                         </div>
+                        <br />
                     </form>
                 </div>
             </div>
