--- a/src/Brioche/CoreBundle/Resources/views/_rounds.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/_rounds.html.twig
@@ -1,23 +1,29 @@
 <div class="row">
     <div class="col-md-4 col-md-offset-4">
         <div class="center-block tournees">
-            {% for round in rounds %}
-                <div class="btn-group tournee{% if round.full %} full{% endif%}" data-round-id="{{ round.id }}">
-                    <button class="btn btn-primary btndate" role="button">
-                        <p class="date">{{ round.date|localizeddate('none', 'none', 'fr', null, 'EEEE d MMMM') }}</p>
-                        <p class="count"><small>Commandes :</small> {{ round.dummy + round.brioches|length }} / {{ round.maximum }}</p>
-                    </button>
-                    {% if not round.full %}
-                        <button class="btn btn-success btnaction" role="button">
-                            <span class="glyphicon glyphicon-ok"></span>
+            {% if rounds|length > 0 %}
+                {% for round in rounds %}
+                    <div class="btn-group tournee{% if round.full %} full{% endif%}" data-round-id="{{ round.id }}">
+                        <button class="btn btn-primary btndate" role="button">
+                            <p class="date">{{ round.date|localizeddate('none', 'none', 'fr', null, 'EEEE d MMMM') }}</p>
+                            <p class="count"><small>Commandes :</small> {{ round.dummy + round.brioches|length }} / {{ round.maximum }}</p>
                         </button>
-                    {% else %}
-                        <button class="btn btn-primary btnaction" role="button">
-                            <span class="glyphicon glyphicon-remove"></span>
-                        </button>
-                    {% endif %}
-                </div>
-            {% endfor %}
+                        {% if not round.full %}
+                            <button class="btn btn-success btnaction" role="button">
+                                <span class="glyphicon glyphicon-ok"></span>
+                            </button>
+                        {% else %}
+                            <button class="btn btn-primary btnaction" role="button">
+                                <span class="glyphicon glyphicon-remove"></span>
+                            </button>
+                        {% endif %}
+                    </div>
+                {% endfor %}
+            {% else %}
+                <p class="well lead text-center">
+                    Il n'y a pas de tournées prevues pour l'instant.
+                </p>
+            {% endif %}
         </div>
         <form action="{{ path('brioche_round') }}" method="post" class="form-round">
             <input type="hidden" name="round" />
