--- a/src/Brioche/CoreBundle/Resources/views/Mail/layout.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Mail/layout.html.twig
@@ -1,21 +1,40 @@
 <html>
     <head>
     </head>
-    <body>
-        <table width="100%" cellspacing="0" cellpadding="0" border="0" bgcolor="#fafafa">
+    <body style="font-family:Helvetica,Arial,sans-serif;color:#333">
+        <table width="100%" cellspacing="0" cellpadding="0" border="0" bgcolor="#f7f7f7">
             <tbody>
+                <tr style="height:12px">
+                    <td>
+                    </td>
+                </tr>
                 <tr>
                     <td>
-                        <table width="80%" cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#fff">
+                        <table width="80%" cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#f7f7f7">
                             <tbody>
                                 <tr>
-                                    <td>
+                                    <td style="background-color:#dd4814; padding:12px 0 0 16px;border-bottom:4px solid #bf3e11">
+                                        <h1 style="color:white;font-size:20px">Brioche du Dimanche</h1>
+                                    </td>
+                                </tr>
+                                <tr style="background-color:#fff">
+                                    <td style="padding:12px 16px;border-color: #ddd;border-style:solid;border-width: 0 1px 4px 1px">
                                         {% block body %}
+                                            <p>Message content</p>
                                         {% endblock %}
+                                        <p>
+                                            Cordialement,<br />
+                                            <a style="color: #428bca" href="http://brioche-du-dimanche.com">http://brioche-du-dimanche.com</a><br />
+                                            contact@brioche-du-dimanche.com
+                                        </p>
                                     </td>
                                 </tr>
                             </tbody>
                         </table>
+                    </td>
+                </tr>
+                <tr style="height:12px">
+                    <td>
                     </td>
                 </tr>
             </tbody>
